--- a/style.css
+++ b/style.css
@@ -124,3 +124,17 @@ width: 10px;
 height: 35%;
 background-color: black;
 }
+
+@media all and (max-width: 480px){
+    body {
+        background-color: cyan;
+        transform: translate(-7%, -7%);
+    }
+    .clock {
+        width: 300px;
+        height: 300px;
+    }
+    .clock .number {
+        font-size: 1rem;
+    }
+}
